pixelated image redner on mobile fix attempt 1

--- a/css/archive.css
+++ b/css/archive.css
@@ -15,7 +15,3 @@
     max-width: fit-content;
     border-style: inset;
 }
-
-img {
-    image-rendering: pixelated;
-}
