--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,3 @@
     max-width: fit-content;
     border-style: inset;
 }
-
-img {
-    image-rendering: pixelated;
-}
